--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "random-messages",
+  "name": "random-messagesjj",
   "version": "1.0.0",
   "description": "random de mensajes",
   "main": "src/index.js",
