--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
   "author": "Jorge Díaz",
   "license": "MIT",
   "bin": {
-    "random-msg": "./bin/global.js"
+    "random-msg": "bin/global.js"
   },
-  "preferGlobal": true
+  "preferGlobal": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jordiaz87/random-messages.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jordiaz87/random-messages/issues"
+  },
+  "homepage": "https://github.com/jordiaz87/random-messages#readme"
 }
